--- a/views/admin-lte/course/peerAssessment/peerReview/components/reviewAssignment.ejs
+++ b/views/admin-lte/course/peerAssessment/peerReview/components/reviewAssignment.ejs
@@ -2,13 +2,16 @@
     <fieldset>
         <div class="form-group">
             <label class="col-sm-5 control-label">Mapping</label>
-            <div class="col-sm-7">
+            <div class="col-sm-6">
                 <div class="col-sm-3">
                     <label class="radio-inline"><input type="radio" name="assignmentType" ng-model="newAssignObj.reviewSettings.reviewAssignment" value="single">1-to-1</label>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-3">
                     <label class="radio-inline"><input type="radio" name="assignmentType" ng-model="newAssignObj.reviewSettings.reviewAssignment" value="multiple">M-to-N</label>
                 </div>
+            </div>
+            <div class="col-sm-1 pa-tooltip">
+                <i class="ionicons ion-ios-help" data-toggle="tooltip" title="{{tooltip}}"></i>
             </div>
         </div>
     </fieldset>
