--- a/views/admin-lte/course/map/map.ejs
+++ b/views/admin-lte/course/map/map.ejs
@@ -274,6 +274,8 @@
         w: 4000,
         h: 4000,
         centerCss: {},
+        centerX: 0,
+        centerY: 0,
 
         init: function (wWidth, wHeight) {
             var self = this;
@@ -294,21 +296,26 @@
 
         setCenter: function (wWidth, wHeight) {
             var self = this;
-
-            self.centerCss = {
-                left: ( (wWidth - self.w) / 2) + 'px',
-                top: ( (wHeight - self.h) / 2) + 'px'
-            };
+            var x = (wWidth - self.w) / 2;
+            var y = (wHeight - self.h) / 2;
+            self.centerX = x;
+            self.centerY = y;
+            self.centerCss = {left: x + 'px', top: y + 'px'};
         },
 
         putOnCenter: function (animate) {
             var self = this;
+            self.position(self.centerCss, animate);
+        },
 
-            if (animate)
-                self.el.animate(self.centerCss, {duration: 1000, easing: 'easeOutExpo'});
-            else
-            // put it on the center
-                self.el.css(self.centerCss);
+        position: function (position, animate) {
+            var self = this;
+            if (animate) {
+                self.el.animate(position, {duration: 1000, easing: 'easeOutExpo'});
+            }
+            else {
+                self.el.css(position);
+            }
         },
 
         zoomChanged: function (value) {
@@ -322,12 +329,10 @@
             self.setCenter(w, h);
             self.putOnCenter();
         }
-
     };
 
     var Container = {
         el: null,
-
         init: function () {
             this.el = $('.tree-container');
 
