--- a/views/admin-lte/mainMenu.ejs
+++ b/views/admin-lte/mainMenu.ejs
@@ -32,11 +32,20 @@
                             <h4>Content:</h4>
                             <ul class="list-unstyled">
                                 <li ng-repeat="content in result.contentNodes">
-
-                                    <a ng-if="content.type=='contentNode'" href="/treeNode/{{content._id}}/#/cid/{{content.courseId._id}}/nid/{{content._id}}">
+                                    <a ng-if="content.type=='contentNode'"
+                                       href="/treeNode/{{content._id}}/#/cid/{{content.courseId._id}}/nid/{{content._id}}">
                                         [{{content.courseId.name}}] {{content.name | cut:true:30:' ...'}}
                                     </a>
-                                    <a ng-if="content.type=='subTopic'" href="/course/{{content.courseId.slug}}/#/cid/{{content.courseId._id}}?tab=map&markedNode={{content._id}}">
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div ng-show="result.contentNodes.length > 0">
+                            <h4>Topics:</h4>
+                            <ul class="list-unstyled">
+                                <li ng-repeat="content in result.contentNodes">
+                                    <a ng-if="content.type=='subTopic'"
+                                       href="/course/{{content.courseId.slug}}/#/cid/{{content.courseId._id}}?tab=map&markedNode={{content._id}}">
                                         [{{content.courseId.name}}] {{content.name | cut:true:30:' ...'}}
                                     </a>
                                 </li>
