--- a/public/partials/pagination.html
+++ b/public/partials/pagination.html
@@ -3,6 +3,6 @@
         <a ng-click="showMoreRows()" class="cursor btn btn-block btn-primary btn-sm">Show More</a>
     </div>
     <div class="showMore" ng-cloak ng-hide="showMoreButton || currentPage == 1">
-        <small>No More Rows</small>
+        <small>No More {{terms}}.</small>
     </div>
 </div>
