advanced search button

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -568,7 +568,11 @@ ul.dropdown-menu.course {
     position: relative;
     left: 20px;
     z-index: 4;
-    display: table-cell
+    pointer-events: none;
+}
+
+.course-control * {
+    pointer-events: auto;
 }
 
 .videoPlayerWrapper {
