--- a/views/admin-lte/course/map/map.ejs
+++ b/views/admin-lte/course/map/map.ejs
@@ -111,46 +111,65 @@
 
 <div class="box-body no-border" id="tree" ng-controller="MapController">
 
-    <div class="course-control">
-        <button data-tooltip="tooltip" title="Information"
-                class="btn btn-default btn-sm" ng-click="showMapInfo()">
-            <i class="ionicons ion-information"></i>
-        </button>
+    <div class="course-control col-xs-2">
+        <div class="row">
+            <div class="col-md-1">
+                <div class="row">
+                    <div class="btn btn-default btn-sm form-control"
+                         data-tooltip="tooltip" type="button" title="Information" ng-click="showMapInfo()">
+                        <i class="ionicons ion-information"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <div class="row">
+                    <div class="btn btn-default btn-sm form-control"
+                         data-tooltip="tooltip" type="button" title="Center Map" onclick="Canvas.putOnCenter(true)">
+                        <i class="ionicons ion-android-locate"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <div class="row">
+                    <div type="button" class="btn btn-default btn-sm form-control" data-toggle="button"
+                         aria-pressed="false" autocomplete="off">
+                        T
+                    </div>
+                </div>
+            </div>
 
-        <button data-tooltip="tooltip" title="Center Map"
-                class="btn btn-default btn-sm" onclick="Canvas.putOnCenter(true)">
-            <i class="ionicons ion-android-locate"></i>
-        </button>
-        <input type="search" class="form-control search-box"
-               title="Search"
-               ng-keyup="$event.keyCode == 13 && findNextMatch()"
-               ng-model="queryText"
-               ng-change="lookupInTree()"
-               placeholder="Search map..."/>
-    </div>
+            <div class="col-md-6 col-md-offset-1">
+                <div class="row">
+                    <input type="range" min="0.5" max="1.5" step="0.1" placeholder="Zoom"
+                           class="inline" data-tooltip="tooltip" title="Zoom" list="zoomSettings"
+                           oninput="Canvas.zoomChanged(this.value)"
+                           onchange="Canvas.zoomChanged(this.value)">
+                    <datalist id="zoomSettings">
+                        <option>0.5</option>
+                        <option>0.6</option>
+                        <option>0.7</option>
+                        <option>0.8</option>
+                        <option>0.9</option>
+                        <option>1.0</option>
+                        <option>1.1</option>
+                        <option>1.2</option>
+                        <option>1.3</option>
+                        <option>1.4</option>
+                        <option>1.5</option>
+                    </datalist>
+                </div>
+            </div>
+        </div>
 
-    <div style="position: absolute;bottom: 10px;right: 20px;z-index: 5;">
-
-        <label class="pull-right"> Zoom
-            <input type="range" min="0.5" max="1.5" step="0.1"
-                   placeholder="Zoom"
-                   tooltip="Zoom"
-                   list="zoomSettings"
-                   oninput="Canvas.zoomChanged(this.value)" onchange="Canvas.zoomChanged(this.value)">
-            <datalist id="zoomSettings">
-                <option>0.5</option>
-                <option>0.6</option>
-                <option>0.7</option>
-                <option>0.8</option>
-                <option>0.9</option>
-                <option>1.0</option>
-                <option>1.1</option>
-                <option>1.2</option>
-                <option>1.3</option>
-                <option>1.4</option>
-                <option>1.5</option>
-            </datalist>
-        </label>
+        <div class="row">
+            <input type="search"
+                   class="form-control"
+                   title="Search"
+                   ng-keyup="$event.keyCode == 13 && findNextMatch()"
+                   ng-model="queryText"
+                   ng-change="lookupInTree()"
+                   placeholder="Search map..."/>
+        </div>
     </div>
 
     <div class="tree-container">
@@ -173,7 +192,6 @@
             </div>
 
         </div>
-
         <!-- modal contents -->
         <% include courseDetailContentMapModals %>
         <!-- /.modal contents -->
