--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -66,7 +66,7 @@
 <script src="/build/courseMapper.js"></script>
 
 <!-- AdminLTE App -->
-<script src="/admin-lte/js/libs.js" type="text/javascript"></script>
+<!--<script src="/admin-lte/js/libs.js" type="text/javascript"></script>-->
 <script src="/l2p-specific/js/iframeResizer.js"></script>
 <script src="/bower/AdminLTE/dist/js/app.min.js" type="text/javascript"></script>
 <script src="/build/cm-utils.js" type="text/javascript"></script>
