--- a/views/admin-lte/mainMenu.ejs
+++ b/views/admin-lte/mainMenu.ejs
@@ -98,7 +98,7 @@
                     </div>
 
                     <br/>
-                    <button class="btn btn-primary btn-sm pull-right"> Advanced Search</button>
+                    <a class="btn btn-primary btn-sm pull-right" ng-href="/search"> Advanced Search</a>
                 </div>
             </div>
         </form>
